<resources>
    <string name="app_name">CS571Android</string>
    <string name="top_bar">Yelp</string>
    <string name="title">Business Search</string>
    <string name="keyWord">KeyWord</string>
    <string name="distance">Distance</string>
    <string name="category">Category</string>
    <string name="location">Location</string>
    <string-array name="category_array">
        <item>Default</item>
        <item>Arts&amp;Entertainment</item>
        <item>Health&amp;Medical</item>
        <item>Hotels&amp;Travel</item>
        <item>Food</item>
        <item>Professional Services</item>
    </string-array>
    <string name="checkBox">Auto-detect my location</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="yelpRecyclerView">yelpRecyclerView</string>
    <string name="businessDetail">BUSINESS DETAILS</string>
    <string name="businessMap">MAP LOCATION</string>
    <string name="businessReview">REVIEWS</string>
    <string name="BusinessLink"><a href="https://www.google.com/">Business Link</a></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>