<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/spinner"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".MainActivity">

<androidx.appcompat.widget.Toolbar
    android:id="@+id/myToolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme"
    app:title="My toolBar"/>


<TextView
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:text="@string/title"
    android:textColor="@color/black"
    android:textSize="30dp" />

<EditText
    android:id="@+id/keyWord"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:inputType="text"
    android:textColorHint="#ff0000" />

<EditText
    android:id="@+id/distance"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:inputType="text" />

<TextView
    android:id="@+id/category"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:textColor="#ff1493"
    android:textSize="20dp" />

<Spinner
    android:id="@+id/category_spinner"
    android:layout_width="234dp"
    android:layout_height="38dp"
    android:layout_marginLeft="20dp"
    android:entries="@array/category_array"
    android:gravity="center" />

<EditText
    android:id="@+id/location"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:inputType="textEmailAddress" />

<CheckBox
    android:id="@+id/simpleCheckBox"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/checkBox"
    android:buttonTint="#ff1493"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginLeft="80dp"
        />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:layout_marginLeft="50dp"/>
</LinearLayout>

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/yelpRecyclerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

</LinearLayout>