<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- back arrow-->
            <ImageView
                android:id="@+id/backArrowIcon"
                android:layout_width="20dp"
                android:layout_height="24dp"
                android:layout_marginEnd="360dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/backarrow" />

            <!-- ToolBar widget -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintStart_toEndOf="@+id/backArrowIcon"
                app:layout_constraintTop_toTopOf="parent"
                app:title="Villy Chinese popular food"
                app:titleTextColor="@color/white" />

            <!-- Right most ImageView -->
            <ImageView
                android:id="@+id/facebookIcon"
                android:layout_width="50dp"
                android:layout_height="24dp"
                android:layout_marginEnd="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/facebook" />

            <ImageView
                android:id="@+id/twitterIcon"
                android:layout_width="50dp"
                android:layout_height="24dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/twitter" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tableTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" >

        <com.google.android.material.tabs.TabItem

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/businessDetail" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/businessMap" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/businessReview" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/myViewPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tableTopBar">
    </androidx.viewpager.widget.ViewPager>

</androidx.constraintlayout.widget.ConstraintLayout>



<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content" >-->
<!--        <TextView-->
<!--            android:id="@+id/detailAddress"-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:text="address"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="20dp" />-->

<!--        <TextView-->
<!--            android:id="@+id/detailPrice"-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_marginStart="100dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:text="price"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="20dp" />-->

<!--        <TextView-->
<!--            android:id="@+id/detailPhoneNumber"-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:text="phone Number"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="20dp" />-->

<!--        <TextView-->
<!--            android:id="@+id/detailStatus"-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_marginStart="100dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:text="Status"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="20dp" />-->

<!--        <TextView-->
<!--            android:id="@+id/detailCategories"-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:text="categories"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="20dp" />-->

<!--        <TextView-->
<!--            android:id="@+id/detailLink"-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_marginStart="100dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:text="Link"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="20dp" />-->
<!--    </LinearLayout>-->

